<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activity.PayUPaymentActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <LinearLayout
        android:id="@+id/payUWallet_addMoneyToWalletLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:visibility="visible">

        <RadioGroup
            android:id="@+id/walletAmountRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/amountRadioButton100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Rs. 100"/>

            <RadioButton
                android:id="@+id/amountRadioButton200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rs. 200"/>

            <RadioButton
                android:id="@+id/amountRadioButton500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rs. 500"/>
        </RadioGroup>

        <TextView
            android:id="@+id/payUWallet_fareAmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Fare Amount = "
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <Button
                android:id="@+id/paytm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:background="@mipmap/paytm_button"
                android:onClick="launchPaytm"
                android:padding="10dp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnPayNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="35dp"
                android:background="@mipmap/payu_button"
                android:onClick="navigateToBaseActivity"
                android:padding="10dp"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
