...
        android:background="@color/get_bike_orange"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/redeem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/black_button_style"
...
            android:padding="10dp"
            android:text="Redeem"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_intermediate" />

        <Button
            android:id="@+id/addMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/black_button_style"
...
